# internal/transport/http/like/dto.go
@@ -7,8 +7,8 @@ import (
 )
 
 type PathIDParam = shared.PathIDParam
-type MetaCursor = shared.MetaCursor
-type CursorPaginatedResponse[T any] = shared.CursorPaginatedResponse[T]
+type MetaCursor = shared.MetaCursor[int64]
+type CursorPaginatedResponse[T any] = shared.CursorPaginatedResponse[T, int64]
 
 type LikerResponse struct {
 	ID         int64  `json:"id"`
